// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Text Input Default smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textInput_1qa8a_1">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Name
          </div>
        </div>
        <input type="text"
               placeholder="Enter your name"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value
        >
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Input ErrorTextinput smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textInput_1qa8a_1 _inputError_1qa8a_63">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Name
          </div>
        </div>
        <input type="text"
               placeholder="Enter your name"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value="John Doe"
        >
        <div class="_errorText_1qa8a_115">
          Name is required
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Input NumberInput smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 100px;">
    <div class="_textInput_1qa8a_1">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Counter
          </div>
        </div>
        <input type="number"
               min="0"
               max="20"
               step="2"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value="0"
        >
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Input PasswordInput smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textInput_1qa8a_1">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Secret
          </div>
        </div>
        <input type="password"
               placeholder="Enter your secret"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value="12345678910111213"
        >
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Input WithDescription smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textInput_1qa8a_1">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Name
          </div>
        </div>
        <div class="_description_1qa8a_99">
          This is a description placeholder. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
        Praesent efficitur porttitor urna, vel dictum turpis ultrices nec. Sed non enim mattis, aliquet augue eget, consectetur metus.
        </div>
        <input type="text"
               placeholder="Enter your name"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value
        >
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Input WithIcon smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textInput_1qa8a_1">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Name
          </div>
          <div class="relative flex items-center gap-2">
            <div class="_icon_wrapper_1j07s_1"
                 style="width: 20px; height: 20px; position: absolute; top: 20px; right: 8px;"
            >
              <svg xmlns="http://www.w3.org/2000/svg"
                   width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   stroke="#000000"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                   class="stroke-primary-900 dark:stroke-primary-400"
              >
                <circle cx="12"
                        cy="12"
                        r="10"
                >
                </circle>
                <line x1="12"
                      y1="8"
                      x2="12"
                      y2="12"
                >
                </line>
                <line x1="12"
                      y1="16"
                      x2="12.01"
                      y2="16"
                >
                </line>
              </svg>
            </div>
          </div>
        </div>
        <input type="text"
               placeholder="Enter your name"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value
               style="padding-right: 30px;"
        >
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Input WithLabelAddon smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textInput_1qa8a_1">
      <label>
        <div class="_label_1qa8a_81 dark:text-white">
          <div>
            Name
          </div>
          <div class="flex items-center gap-2">
            Add anything here. Even an icon!
            <div class="_icon_wrapper_1j07s_1"
                 style="width: 20px; height: 20px;"
            >
              <svg width="20"
                   height="20"
                   viewbox="0 0 12 13"
                   fill="none"
                   stroke="#000000"
                   class="stroke-primary-900 dark:stroke-primary-400"
                   xmlns="http://www.w3.org/2000/svg"
              >
                <path d="M9.01929 5.55022L6.9498 3.48072M1 11.5L2.75098 11.3054C2.96491 11.2817 3.07187 11.2698 3.17185 11.2374C3.26055 11.2087 3.34496 11.1681 3.4228 11.1168C3.51053 11.059 3.58663 10.9829 3.73883 10.8307L10.5714 3.9981C11.1429 3.42662 11.1429 2.50008 10.5714 1.92861C9.99993 1.35713 9.07339 1.35713 8.50192 1.9286L1.66934 8.76117C1.51714 8.91337 1.44104 8.98947 1.38319 9.0772C1.33186 9.15504 1.29129 9.23945 1.26257 9.32815C1.23021 9.42813 1.21832 9.53509 1.19455 9.74902L1 11.5Z"
                      stroke-width="1"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
            </div>
          </div>
        </div>
        <input type="text"
               placeholder="Enter your name"
               autocomplete="off"
               class="dark:border-primary-400 dark:focus:border-white"
               value
        >
      </label>
    </div>
  </div>
</div>
`;
